package com.jkos.hackathon.dto;

import lombok.Data;

@Data
public class AllowedSkillLevelMappingDTO {

    private String teamName;
    private String vacancyTitle;
    private String skillName;
    private String skillLevel;

}
